--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'androidx.navigation.safeargs'
+apply plugin: 'com.google.gms.google-services'
+apply plugin: "androidx.navigation.safeargs"
 
 
 android {
@@ -25,7 +27,7 @@ android {
     flavorDimensions "version"
     productFlavors {
         capstone {
-            applicationIdSuffix '.capstone'
+            applicationIdSuffix ''
         }
         compose {
             applicationIdSuffix '.compose'
@@ -63,6 +65,21 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+
+    // firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:26.7.0')
+
+    // firebase authentication
+    implementation 'com.google.firebase:firebase-auth'
+
+    // facebook
+    def facebook_version = '4.42.0'
+    implementation "com.facebook.android:facebook-login:$facebook_version"
+    implementation "com.facebook.android:facebook-android-sdk:$facebook_version"
+
+    // material
+    def material_version = '1.4.0-alpha01'
+    implementation "com.google.android.material:material:$material_version"
 
 
     /** Compose */
