--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,11 @@
         <!-- Forrest -->
         <activity
             android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login" />
-        <activity android:name=".ui.MainActivity">
+            android:label="@string/title_activity_login"
+            android:theme="@style/Theme.Forrest.NoActionBar" />
+        <activity
+            android:name=".ui.MainActivity"
+            android:theme="@style/Theme.Forrest.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -33,10 +36,10 @@
 
         <activity
             android:name="com.facebook.FacebookActivity"
-            android:theme="@style/Translucent"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
-            tools:replace="android:theme"/>
+            android:theme="@style/Translucent"
+            tools:replace="android:theme" />
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
