--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.google_services_version = '4.3.8'
     ext.nav_version = '2.3.4'
     ext.hilt_version = '2.35'
+    ext.secrets_version = '1.3.0'
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.2'
-        classpath 'com.google.gms:google-services:4.3.8'
+        classpath "com.google.gms:google-services:$google_services_version"
 
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:$secrets_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
