--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,13 +47,13 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    def lifecyle_version = '2.3.1'
+    def appcompat_version = '1.3.0'
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.annotation:annotation:1.1.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecyle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecyle_version"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.room:room-runtime:2.3.0'
     testImplementation 'junit:junit:4.13.2'
@@ -66,7 +66,7 @@ dependencies {
     implementation "com.jakewharton.timber:timber:$timber_version"
 
     // navigation
-    def nav_version = "2.3.4"
+    def nav_version = '2.3.4'
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
