--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,7 +84,7 @@ dependencies {
     implementation "com.facebook.android:facebook-login:$facebook_version"
     implementation "com.facebook.android:facebook-android-sdk:$facebook_version"
 
-    // material
+    // Material
     def material_version = '1.4.0'
     implementation "com.google.android.material:material:$material_version"
 
