--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,14 @@ ext {
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.google_services_version = '4.3.8'
-    ext.nav_version = '2.3.4'
-    ext.hilt_version = '2.36'
-    ext.secrets_version = '1.3.0'
+    ext {
+        google_services_version = '4.3.8'
+        nav_version = '2.3.4'
+        hilt_version = '2.36'
+        secrets_version = '1.3.0'
+        dagger_version = '2.27'
+    }
+
     repositories {
         google()
         mavenCentral()
