chore: Added retrofit to handle network requests and updated hilt version

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,9 +99,9 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     annotationProcessor "com.google.dagger:hilt-compiler:$hilt_version"
 
-    // Dagger dependencies
-    implementation "com.google.dagger:dagger:$dagger_version"
-    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    // Retrofit
+    def retrofit_version = '2.9.0'
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
 
     // Image
     implementation 'com.github.bumptech.glide:glide:4.12.0'
